tests/frontend/fail/array/cross_contract_out_of_bounds.act
constructor of A
interface constructor()

creates

  uint[3] ar := [1,2,3]



constructor of B
interface constructor(address<A> a)

creates

  int y := a.ar[3]
